[package]
name = "razorpay"
version = "0.3.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Razorpay api bindings"
homepage = "https://github.com/sajuthankappan/razorpay-rs"
repository = "https://github.com/sajuthankappan/razorpay-rs"
readme = "README.md"
keywords = ["strava"]
categories = ["api-bindings"]

[dependencies]
ring = "0.16.20"
data-encoding = "2.3.2"
serde = { version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
